Bug 100422 - MAIL MERGE - LO crash if you exit Mail Merge Wizard after loading previous document or template
Summary: MAIL MERGE - LO crash if you exit Mail Merge Wizard after loading previous do...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.beta2
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-16 10:23 UTC by Marco Filippozzi
Modified: 2016-10-25 18:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Filippozzi 2016-06-16 10:23:16 UTC
The Mail Merge Wizard create the document in background when you select to load a previous document or a template in step 1. This causes a crash if you exit the Mail Merge Wizard before completion.
I think it's because the document is loaded in background when you close the wizard.

STEPS:
*Tools -> Mail Merge Wizard
*Start from existing document/Start from template
*Select the document/template and click next
*Close the wizard pressing cancel or the X button

Notice how the document is created before the completion of the wizard.

Expected Behaviour:
The document/template is loaded after the completion of the wizard.

Tested on:
Version: 5.2.0.0.beta2
Build ID: ae12e6f168ba39f137fc110174a37c482ce68fa4
CPU Threads: 2; OS Version: Linux 4.1; UI Render: default;
Locale: it-IT (it_IT.UTF-8)
OS:    openSUSE Leap 42.1 (x86_64)

Version: 5.3.0.0.alpha0+
Build ID: a8bd44573b75d1399257d6f5d052611439607189
CPU Threads: 2; OS Version: Linux 4.1; UI Render: default;
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-06-13_23:46:49
Locale: it-IT (it_IT.UTF-8)
OS:    openSUSE Leap 42.1 (x86_64)
Comment 1 Marco Filippozzi 2016-06-16 12:18:44 UTC
SEVERITY NORMAL -> CRITICAL, HIGH because crash and loss of data
Comment 2 Alex Thurgood 2016-06-16 12:31:11 UTC
Caolan : DUP of 97501 ?
Comment 3 Alex Thurgood 2016-06-16 12:31:34 UTC
(In reply to Alex Thurgood from comment #2)
> Caolan : DUP of 97501 ?

DUP of bug 97501 ?
Comment 4 Alex Thurgood 2016-06-16 12:32:38 UTC
No, probably not, seeing as the fix for master in bug 97501 went in in February
Comment 5 Caolán McNamara 2016-06-16 13:13:38 UTC
This one exists in master right now, so this is unfixed
Comment 6 Commit Notification 2016-06-16 13:19:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f04c48a7e764775bdd98715e5d17845f1786bd44

Resolves: tdf#100422 crash if you exit mail merge wizard...

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-06-16 13:22:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=be42adb962f9bf66f353d16dadc984d265bf3560&h=libreoffice-5-2

Resolves: tdf#100422 crash if you exit mail merge wizard...

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2016-06-16 13:23:43 UTC
makes it not crash anyway