Resolves: tdf#100422 crash if you exit mail merge wizard...

after loading previous document or template

Change-Id: I3bdd1159e367b0297aee84763bf5c4312e9e91fa
(cherry picked from commit f04c48a7e764775bdd98715e5d17845f1786bd44)